syntax = "proto3";

package greeter;

option go_package = "./pb";  // Goの出力パッケージ名

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc StreamHello (HelloRequest) returns (stream HelloReply) {};
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
